poke/testsuite/poke.pkl/sl-diag-3.pk
/* { dg-do compile } */

defvar i = (1 as int<35>) <<. 35; /* { dg-error "too big" } */
